@@ -35,7 +35,7 @@ __all__ = [
     'Property',
     'Selection', 'SelectionRequired',
     'DictSchema', 'Dict', 'DictDefault', 'DictRequired',
-    'Binary', 'BinaryDefault', 'BinaryRequired',
+    'Binary', 'BinaryDefault', 'BinaryRequired', 'BinaryFileStorage',
     'Many2OneDomainValidation', 'Many2OneTarget', 'Many2OneOrderBy',
     'Many2OneSearch', 'Many2OneTree', 'Many2OneMPTT',
     ]
@@ -725,6 +725,13 @@ class BinaryRequired(ModelSQL):
     'Binary Required'
     __name__ = 'test.binary_required'
     binary = fields.Binary('Binary Required', required=True)
+
+
+class BinaryFileStorage(ModelSQL):
+    "Binary in FileStorage"
+    __name__ = 'test.binary_filestorage'
+    binary = fields.Binary('Binary', file_id='binary_id')
+    binary_id = fields.Char('Binary ID')
 
 
 class Many2OneTarget(ModelSQL):
