@@ -11,12 +11,16 @@ except ImportError:
     sys.modules['cdecimal'] = decimal
 import unittest
 import datetime
+import shutil
+import tempfile
+
 from decimal import Decimal
 from trytond.tests.test_tryton import install_module, with_transaction
 from trytond.transaction import Transaction
 from trytond.exceptions import UserError
 from trytond.model import fields
 from trytond.pool import Pool
+from trytond.config import config
 
 
 class FieldsTestCase(unittest.TestCase):
@@ -25,6 +29,13 @@ class FieldsTestCase(unittest.TestCase):
     @classmethod
     def setUpClass(cls):
         install_module('tests')
+
+    def setUp(self):
+        path = config.get('database', 'path')
+        dtemp = tempfile.mkdtemp()
+        config.set('database', 'path', dtemp)
+        self.addCleanup(config.set, 'database', 'path', path)
+        self.addCleanup(shutil.rmtree, dtemp)
 
     @with_transaction()
     def test_boolean(self):
@@ -3285,6 +3296,31 @@ class FieldsTestCase(unittest.TestCase):
 
         self.assertRaises(UserError, BinaryRequired.create,
             [{'binary': fields.Binary.cast(b'')}])
+
+    @with_transaction()
+    def test_binary_filestorage(self):
+        "Test Binary FileStorage"
+        pool = Pool()
+        Binary = pool.get('test.binary_filestorage')
+        transaction = Transaction()
+
+        bin1, = Binary.create([{
+                    'binary': fields.Binary.cast(b'foo'),
+                    }])
+        self.assertEqual(bin1.binary, fields.Binary.cast(b'foo'))
+        self.assertTrue(bin1.binary_id)
+
+        Binary.write([bin1], {'binary': fields.Binary.cast(b'bar')})
+        self.assertEqual(bin1.binary, fields.Binary.cast(b'bar'))
+
+        with transaction.set_context(
+                {'test.binary_filestorage.binary': 'size'}):
+            bin1_size = Binary(bin1.id)
+            self.assertEqual(bin1_size.binary, len(b'bar'))
+
+        Binary.write([bin1], {'binary': None})
+        self.assertEqual(bin1.binary, None)
+        self.assertEqual(bin1.binary_id, None)
 
     @with_transaction()
     def test_many2one(self):
